monticore-generator/src/test/resources/cocos/valid/ReferencedSymbol.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.valid;

grammar ReferencedSymbol extends cocos.valid.SubGrammarWithSymbol, cocos.valid.Attributes{

  symbol A = Name;

  B = bname:Name@A;

  D = sub:Name@SubSymbol;

  S = state:Name@State;

}
