monticore-generator/src/test/resources/cocos/invalid/A4012/A4012a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4012;

grammar A4012a {
  A;

  B;

  abstract C extends A, B;

}
